--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -25,10 +25,10 @@ jobs:
       run: chmod +x gradlew
 
     - name: Build with Gradle
-      run: ./gradlew build
+      run: bash ./gradlew build
 
     - name: Build Release APK
-      run: ./gradlew assembleRelease
+      run: bash ./gradlew assembleRelease
 
     - name: Upload APK artifact
       uses: actions/upload-artifact@v4
